--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,41 +1,68 @@
+@import "colors";
+
 * {
   margin: 0;
   padding: 0;
+  // box-sizing: border-box;
 }
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;500&family=Poppins:wght@400;600&display=swap");
-// file scss
-$f-poppins: "Poppins", sans-serif;
-$f-kanit: "Kanit", sans-serif;
-$color-01: #0a002c;
-$color-02: #ffffff;
-$font-28: 28px;
-$font-18: 18px;
 
 body {
   font-family: $f-poppins;
-  background-color: #cfcfcf;
+  background-color: #f6faff;
   // overflow untuk menyembynikan apa bila ada yg offside
   overflow-x: hidden;
   margin-bottom: 1000px;
 }
 
 nav {
-  width: 100%;
+  // max-width: 1170px;
+  // display: flex;
+  // padding: 0 15px;
+  // margin: 0 auto;
   display: flex;
   position: fixed;
+  width: 100%;
   justify-content: space-around;
   height: 60px;
-  z-index: 10;
+  z-index: 100;
+  &.sticky {
+    @include grd-transparant($bg-color-grey);
+    width: 100%;
+    height: 60px;
 
+    ul {
+      li {
+        a {
+          color: $color-01;
+          font-weight: 600;
+        }
+      }
+    }
+  }
   .logo {
     font-size: $font-28;
     color: $color-01;
     font-family: $f-kanit;
     font-weight: 400;
-    padding-top: 8px;
+    padding-top: 2px;
     align-items: center;
-    width: 300px;
+    width: 400px;
     text-transform: capitalize;
+    span {
+      display: block;
+      border-bottom: 0.4rem solid $color-03;
+      padding-bottom: 0.1vh;
+      width: 3em;
+      &::after {
+        content: "";
+        position: absolute;
+        display: inherit;
+        border-bottom: 0.4rem solid;
+        padding-bottom: 0.1vh;
+        width: 1.5em;
+        z-index: 10;
+      }
+    }
   }
   ul {
     display: flex;
@@ -68,6 +95,15 @@ nav {
     position: relative;
     cursor: pointer;
     transition: 0.2s;
+    &.active {
+      &::before {
+        transform: translateY(0) rotate(45deg);
+        box-shadow: 0 0 0 $color-01;
+      }
+      &::after {
+        transform: translateY(0) rotate(-45deg);
+      }
+    }
 
     &::before {
       content: "";
@@ -80,7 +116,6 @@ nav {
       transform: translateY(-10px);
       box-shadow: 0 10px 0 $color-01;
     }
-
     &::after {
       content: "";
       position: absolute;
@@ -92,251 +127,380 @@ nav {
       transform: translateY(10px);
     }
   }
-  .menuTogle.active {
-    &::before {
-      transform: translateY(0) rotate(45deg);
-      box-shadow: 0 0 0 $color-01;
-    }
-    &::after {
-      transform: translateY(0) rotate(-45deg);
-    }
-  }
-}
-
-nav.sticky {
-  width: 100%;
-  height: 60px;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-  ul {
-    li {
-      a {
-        color: $color-01;
-        font-weight: 600;
-      }
-    }
-  }
 }
 
 .jumbotron {
   width: 100%;
-  height: 575px;
+  height: 560px;
   background-image: url("../assets/img/banner.png");
   background-size: cover;
   &::after {
     content: "";
     display: block;
-    width: 75%;
+    width: 80%;
     height: 100%;
-    background-image: linear-gradient(
-      to right,
-      rgb(250, 250, 255),
-      rgba(0, 0, 0, 0)
+    margin-bottom: 0;
+    background: rgb(230, 229, 229);
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0) 5%,
+      rgba(255, 255, 255, 1) 100%
     );
-    position: relative;
+    position: absolute;
+    z-index: 1;
     bottom: 0;
   }
   .content {
     position: absolute;
     color: $color-01;
-    margin: 25vh 12%;
+    margin: 25vh 10%;
     font-family: $f-poppins;
-    z-index: 1;
+    z-index: 5;
     h1 {
       font-weight: 600;
-      font-size: 2.8em;
+      font-size: 3.2em;
       text-transform: capitalize;
       span {
-        color: #107020;
+        color: $color-03;
       }
     }
     h3 {
-      font-size: 1.5em;
+      font-size: 1.8em;
       font-weight: 700;
       margin-top: -10px;
-      span.cursor {
-        display: inline-block;
-        width: 2px;
-        height: 1.3em;
-        background-color: $color-01;
-        margin-left: -0.2rem;
-        animation: blink 1s infinite;
-      }
-
-      span.typing {
-        animation: none;
-      }
-      @keyframes blink {
-        0% {
+      span {
+        &.cursor {
+          display: inline-block;
+          width: 2px;
+          height: 1.3em;
           background-color: $color-01;
+          margin-left: -0.2rem;
+          animation: blink 1s infinite;
         }
-        50% {
-          background-color: transparent;
+        &.typing {
+          animation: none;
         }
-        100% {
-          background-color: $color-01;
+        @keyframes blink {
+          0% {
+            background-color: $color-01;
+          }
+          50% {
+            background-color: transparent;
+          }
+          100% {
+            background-color: $color-01;
+          }
         }
       }
     }
     p {
       display: block;
-      // background-color: $color-02;
       color: #464646;
       width: 390px;
       word-spacing: 4px;
       font-size: 1.1em;
+      font-weight: normal;
       margin-top: 20px;
     }
   }
 }
 
-// Tablet
-
-@media screen and (max-width: 920px) {
-  nav {
-    ul {
-      width: 40%;
-    }
-  }
-  .jumbotron {
-    background-position-x: -80px;
-    height: 100vh;
-    .content {
-      margin: 150px 60px;
-    }
-  }
-}
-
-// Smartphone
-@media screen and (max-width: 670px) {
-  nav {
-    position: unset;
-    background-color: #ffffff;
-    backdrop-filter: inherit;
-    ul {
-      position: absolute;
-      width: 100%;
-      // right: 0;
-      top: 8vh;
-      // justify-content: space-evenly;
+section {
+  .container {
+    margin-top: 30vh;
+    .about {
       text-align: center;
-      flex-direction: column;
-      background: rgba(3, 0, 12, 0.25);
-      backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px);
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      transform: translate(0, -100%);
-      transition: all 0.5s;
-      z-index: -1;
-      a {
-        color: $color-01;
+      h1 {
+        @include judul-h1();
       }
-      li {
-        position: relative;
-        padding: 15px 45%;
-        height: 30px;
-        font-size: 20px;
-        font-weight: 600;
-        z-index: 20;
-        &:hover {
-          background: rgb(205, 250, 250);
-          background: linear-gradient(
-            0deg,
-            rgba(205, 250, 250, 1) 0%,
-            rgba(136, 224, 224, 1) 100%
-          );
+      h3 {
+        @include judul-h3();
+      }
+
+      .content-about {
+        img {
+          width: 18em;
+          border-radius: 10px;
+          box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+            rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+            rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
         }
-        a {
-          &:hover {
-            display: none;
+        margin-top: 12vh;
+        display: flex;
+        justify-content: center;
+        .text-about {
+          // background-color: lightblue;
+          margin-left: 100px;
+          width: 100vh;
+          text-align: left;
+          button {
+            font-family: $f-poppins;
+            font-size: 1.2em;
+            background-color: $color-03;
+            border: none;
+            border-radius: 8px;
+            padding: 18px 34px;
+            color: $color-02;
+            cursor: pointer;
+            box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+            &:active {
+              position: relative;
+              top: 7px;
+              box-shadow: none;
+            }
+            &:hover {
+              background-color: #00a149;
+            }
+            img {
+              border-radius: unset;
+              box-shadow: unset;
+              color: $color-02 !important;
+              width: 0.9em;
+              margin-left: 10px;
+              svg path {
+                fill: ivory;
+              }
+            }
+          }
+          .project-about {
+            display: flex;
+            margin: 10vh 0;
+            justify-content: space-between;
+            // background-color: bisque;
+            h1 {
+              font-family: $f-poppins;
+            }
+            p {
+              display: block;
+              width: 6em;
+              text-align: center;
+              // background-color: beige;
+            }
           }
         }
       }
     }
-    ul.active {
-      transform: translateX(0);
-      z-index: -10;
-    }
-    .logo {
-      width: 300px;
-      margin-top: 10px;
-      font-size: 20px;
-    }
-    .menuTogle {
-      display: flex;
-    }
-  }
-  nav.sticky {
-    display: none;
-    transition: 2s;
-  }
-
-  section {
-    position: relative;
-    z-index: -20;
-    .jumbotron {
-      position: absolute;
-      height: 380px;
-      background-position-x: -50px;
-      &::after {
-        width: 100%;
-        background-image: linear-gradient(
-          to bottom,
-          rgb(250, 250, 255),
-          rgba(0, 0, 0, 0)
-        );
-      }
-      .content {
-        width: 100%;
-        margin: 70px auto;
+    .skills {
+      margin-top: 30vh;
+      .content-skill {
         text-align: center;
-        p {
-          display: block;
-          margin: 0 auto;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 420px) {
-  nav {
-    ul {
-      top: 6vh;
-      li {
-        align-items: center;
-        padding: 15px 40%;
-      }
-    }
-  }
-
-  section {
-    .jumbotron {
-      height: 320px;
-      background-position-x: -300px;
-      .content {
-        margin-top: 50px;
-        h1,
-        h3,
-        p {
-          font-size: 0.8em;
-        }
         h1 {
-          font-size: 1.8em;
-          margin-bottom: 5px;
+          @include judul-h1();
         }
         h3 {
-          font-size: 1em;
+          @include judul-h3();
         }
-        p {
-          margin-top: 12px;
-          width: auto;
+        .warp-content {
+          width: 100%;
+          display: flex;
+          justify-content: space-around;
+          margin-top: 20vh;
+        }
+        .content-frontend {
+          .frontend {
+            @include shadow-skills();
+            .f-code {
+              // background-color: #00a149;
+              display: flex;
+              justify-content: space-around;
+              @include img-skill();
+              h2 {
+                padding-right: 50px;
+                // background-color: aquamarine;
+              }
+            }
+          }
+          // dropdown frontend
+          .dropdown-content {
+            display: none;
+            width: 100%;
+            margin-top: 20px;
+            position: relative;
+            min-width: 160px;
+            // transition: 1s;
+            text-align: left;
+            z-index: 1;
+            // background-color: aqua;
+            // .warp-contents {
+            //   display: flex;
+            // }
+            .html {
+              @include display-probar;
+              // background-color: bisque;
+
+              .probar {
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(85%);
+                }
+              }
+            }
+
+            .css {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(80%);
+                }
+              }
+            }
+
+            .js {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(60%);
+                }
+              }
+            }
+            .sass {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(80%);
+                }
+              }
+            }
+            .react {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(50%);
+                }
+              }
+            }
+            .react {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(50%);
+                }
+              }
+            }
+            .bootstrap {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(70%);
+                }
+              }
+            }
+            .github {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(50%);
+                }
+              }
+            }
+            .restapi {
+              @include display-probar;
+              .probar {
+                // margin-right: 80px;
+                @include probar();
+                .nth-probar {
+                  @include nth-probar(30%);
+                }
+              }
+            }
+          }
+
+          /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+          .show {
+            display: block;
+          }
+          // akhir dropdown frontend
+        }
+        .content-desain {
+          // awal dropdown desain
+          .desain {
+            @include shadow-skills();
+            // background-color: chartreuse;
+            .d-code {
+              // background-color: cyan;
+              display: flex;
+              justify-content: space-around;
+              @include img-skill();
+              h2 {
+                padding-right: 50px;
+              }
+            }
+          }
+
+          .dropdownDesain {
+            display: none;
+            width: 100%;
+            margin-top: 20px;
+            position: relative;
+            min-width: 160px;
+            text-align: left;
+            z-index: 1;
+            .figma {
+              @include display-probar;
+              // background-color: darkgray;
+              .probar {
+                @include probar();
+                .nth-probar {
+                  // background-color: #f6faff;
+                  @include nth-probar(85%);
+                }
+              }
+            }
+            .adxd {
+              @include display-probar;
+              // background-color: darkgray;
+              .probar {
+                @include probar();
+                .nth-probar {
+                  // background-color: #f6faff;
+                  @include nth-probar(80%);
+                }
+              }
+            }
+            .ai {
+              @include display-probar;
+              // background-color: darkgray;
+              .probar {
+                @include probar();
+                .nth-probar {
+                  // background-color: #f6faff;
+                  @include nth-probar(85%);
+                }
+              }
+            }
+            .ps {
+              @include display-probar;
+              // background-color: darkgray;
+              .probar {
+                @include probar();
+                .nth-probar {
+                  // background-color: #f6faff;
+                  @include nth-probar(60%);
+                }
+              }
+            }
+          }
+          .showDesain {
+            display: block;
+          }
         }
       }
     }
   }
 }
+
+@import "responsive";
